# pucro

./: .gitignore  README.md  meson.build  meson_options.txt
build-aux/: compress.sh
data/: meson.build  pucro.conf  pucrod.service.in
docs/: index.ini  meson.build  pucro.conf.5.md  pucrod.service.8.md
selinux/: build_policy.py  meson.build  pucro.fc.in  pucro.te.in
src/: config.c  config.h  dispatch.c  dispatch.h  input.c  input.h  pucro.c  seat.c  seat.h  utils.c  utils.h
