# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

option('man', type : 'feature', value : 'auto',
       description : 'Build and install the man pages (requires mrkd)')

option('selinux', type : 'boolean', value : false,
       description : 'Build and install SELinux policies')

option('selinux_makefile', type : 'string', value : 'auto',
       description : 'Path to the SELinux devel makefile')
